fixed skill text color on mobile

--- a/src/style.sass
+++ b/src/style.sass
@@ -53,6 +53,7 @@ $debuff-skill-color: green
     border-radius: 9999rem
     border: none
     display: flex
+    color: #262626
     gap: 0.5rem
     user-select: none
     box-shadow: 0.1rem 0.1rem 0.3rem rgba(0, 0, 0, 0.2)
